// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Link Default 1`] = `
<div>
  A normal link with "a" tag 
  <a
    className="borrow-ui__link borrow-ui__link--underline "
  >
    looks like this
  </a>
  .
</div>
`;

exports[`Storyshots Components/Link Underline 1`] = `
<div>
  A link without underline 
  <a
    className="borrow-ui__link borrow-ui__link--no-underline "
  >
    looks like this
  </a>
  .
</div>
`;
